--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^3.1.2",
     "@astrojs/tailwind": "^5.1.0",
+    "aos": "^2.3.4",
     "astro": "^4.11.0",
+    "astro-compressor": "^0.4.1",
+    "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
+  },
+  "devDependencies": {
+    "@iconify-json/bi": "^1.1.23",
+    "@iconify-json/bxl": "^1.1.10",
+    "@iconify-json/mdi": "^1.1.67",
+    "@types/aos": "^3.0.7"
   }
 }
