--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -50,10 +50,11 @@ jobs:
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
 
-    - name: Commit changes
+    - name: Commit and push changes
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git pull origin main
         git add src/data/projects.json
         git commit -m "Update projects.json"
         git push
